--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 # Agrega aquí las librerías necesarias, por ejemplo:
 # numpy==1.21.2
 # pandas==1.3.3
-# tensorflow==2.6.0
+tensorflow
 matplotlib
 opencv-python
+scikit-learn
+numpy
